--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style/style_menu.css">
-  <link rel="stylesheet" href="/fonts/stylesheet.css">
+  <link rel="stylesheet" href="fonts/stylesheet.css">
   <title>Menu</title>
 </head>
 <body>
