--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           <div class="menu-icons__img icon"><a href="#"><img src="icons/profile.svg"></a></div>
         </div>
           <div class="contacts">
-            <div class="mail">mail@cps.com</div>
-            <div class="tel">8 800 890 8900</div>
+            <div class="contacts-mail"><a href="mailto:mail@cps.com&body=Привет.">mail@cps.com</a></div>
+            <div class="contacts-tel"><a href="tel:8 800 890 8900">8 800 890 8900</a></div>
           </div>
         </div>
       <div class="lang">
